--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page E-Commerce</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="asset/css/style.css">
 </head>
 <body>
     <header>
@@ -36,22 +36,22 @@
         <h2>Featured Products</h2>
         <div class="product-grid">
             <div class="product-card">
-                <img src="Asset/a13eb2f72c9e0fcfef96a53334ba6c45.jpg" alt="Nike Sneaker">
+                <img src="asset/images/a13eb2f72c9e0fcfef96a53334ba6c45.jpg" alt="Nike Sneaker">
                 <h3>Nike Sneaker</h3>
                 <p>$99.99</p>
             </div>
             <div class="product-card">
-                <img src="Asset/b8b9b4fc199b3d4a2477773bf01a81b8.jpg" alt="Nike Airzoom Carbon 2">
+                <img src="asset/images/b8b9b4fc199b3d4a2477773bf01a81b8.jpg" alt="Nike Airzoom Carbon 2">
                 <h3>Nike Airzoom Carbon 2</h3>
                 <p>$89.99</p>
             </div>
             <div class="product-card">
-                <img src="Asset/357bab0110c0bd45a7163a89755663de.jpg" alt="Nike Airzoom Carbon 1">
+                <img src="asset/images/357bab0110c0bd45a7163a89755663de.jpg" alt="Nike Airzoom Carbon 1">
                 <h3>Nike Airzoom Carbon 1</h3>
                 <p>$79.99</p>
             </div>
             <div class="product-card">
-                <img src="Asset/65cdb00bf8b7fe4366097ea7e6d34280.jpg" alt="Nike Phantom Gx">
+                <img src="asset/images/65cdb00bf8b7fe4366097ea7e6d34280.jpg" alt="Nike Phantom Gx">
                 <h3>Nike Phantom Gx</h3>
                 <p>$69.99</p>
             </div>
